# inferno_as_a_service

./: .coderabbit.yaml  .env.example  .gitignore  CMakeLists.txt  DEV-LOG.md  PROJECT.md  crash_log.txt  docker-compose.yml  test_loop.sh  test_loop2.sh  test_loop_lldb.sh  verify_phase4a.sh
.github/workflows/: inferno_ci.yml
build_asan/: CTestTestfile.cmake  cmake_install.cmake
build_asan/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_asan/inferno_common_autogen/: deps
build_asan/wrapper/: CTestTestfile.cmake  cmake_install.cmake
build_test/: CTestTestfile.cmake  cmake_install.cmake
build_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_test/inferno_common_autogen/: deps
build_test/wrapper/: CTestTestfile.cmake  cmake_install.cmake
client/: README.md  dll2header.py
client/include/: Agent.hpp  CameraCapture.hpp  EmbeddedDll.hpp  EntitlementScanner.hpp  Http2Client.hpp  KeyLogger.hpp  MachInjector.hpp  NtApi.hpp  ProcessProfiler.hpp  Propagator.hpp  ReflectiveLoader.hpp  ScreenCapture.hpp  ShellExecutor.hpp  WindowsInjector.hpp  entry_dylib.hpp
client/src/: Agent.cpp  CameraCapture.cpp  EntitlementScanner.cpp  Http2Client.cpp  KeyLogger.cpp  MachInjector.cpp  NtApi.cpp  ProcessProfiler.cpp  Propagator.cpp  ReflectiveLdrShellcode.asm  ReflectiveLoader.cpp  ScreenCapture.cpp  ScreenCapture.mm  ShellExecutor.cpp  WindowsInjector.cpp  entry_dll.cpp  entry_dylib.cpp  main.cpp  shim.cpp  windows_loader.cpp
common/: README.md
common/include/: CryptoContext.hpp  Opcodes.hpp  Packet.hpp  Socket.hpp  TlsTransport.hpp  Transport.hpp
common/src/: CryptoContext.cpp  Packet.cpp  Socket.cpp  TlsTransport.cpp
docs/: ARCHITECTURE.md  ARCHTECTURE.md  CLIENT.md  DATABASE.md  KEYLOGGER.md  PROPAGATION.md  PROTOCOL.md  ROADMAP_FORWARD.md  SERVER.md  mermaid_architecture_schema.mmd
packer/: packer.py  stub.asm  stub.c
scripts/: gen_test_cert.sh
server/: README.md  server
server/include/: AgentCardDialog.hpp  Analysis.hpp  DataStreamWidget.hpp  Inferno_Database.hpp  MainWindow.hpp  server.hpp
server/include/database/: Inferno_Database.hpp
server/include/network/: Http2Server.hpp  server.hpp
server/include/services/: IntelAnalysisService.hpp
server/include/ui/: MainWindow.hpp  StyleSheets.hpp
server/include/ui/components/: AgentCardDialog.hpp  CommandDialog.hpp  InjectionPanel.hpp  IntelligencePanel.hpp  KeylogPanel.hpp  MediaPanel.hpp  PropagationPanel.hpp  TelemetryPanel.hpp
server/resources/: styles.qrc  styles.qss
server/src/: AgentCardDialog.cpp  Analysis.cpp  CommandDialog.cpp  DataStreamWidget.cpp  Inferno_Database.cpp  MainWindow.cpp  main.cpp  server.cpp
server/src/database/: Inferno_Database.cpp
server/src/network/: Http2Server.cpp  server.cpp
server/src/services/: Analysis.cpp  IntelAnalysisService.cpp
server/src/ui/: MainWindow.cpp
server/src/ui/components/: AgentCardDialog.cpp  CommandDialog.cpp  DataStreamWidget.cpp  InjectionPanel.cpp  IntelligencePanel.cpp  KeylogPanel.cpp  MediaPanel.cpp  PropagationPanel.cpp  TelemetryPanel.cpp
tests/: analysis_test.cpp  cameracapture_test.cpp  database_test.cpp  embedded_dll_test.cpp  handshake_system_info_test.sh  http2_transport_test.cpp  inject_e2e_macos_test.cpp  inject_e2e_test.cpp  injector_test.cpp  keylogger_interactive_test.cpp  keylogger_test.cpp  keylogger_test.sh  macos_capture_test.mm  main_test.cpp  malleable_packet_test.cpp  packer_test.py  packet_test.cpp  peb_env_test.cpp  process_list_test.sh  process_profiler_test.cpp  reflective_loader_test.cpp  remote_shell_test.sh  run_tests  scanner_test.cpp  screencapture_test.cpp  self_delete_test.cpp  server_test.cpp  shell_test.cpp  socket_integration_test.cpp  socket_test.cpp  tcc_packet_test.cpp  test_server.cpp  test_socket.cpp  verify_code_signing.cmake  windows_dll_test.cpp  wire_reflective_test.cpp
wrapper/: CMakeLists.txt  bin2header.py
wrapper/include/: unlit.hpp
wrapper/resources/: gen_ico.py  gen_plist.py  resource.rc
wrapper/src/: main.cpp
